--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "@types/http-proxy": "^1.17.9",
+    "@types/uuid": "^9.0.0",
     "http-proxy": "^1.18.1",
     "mongoose": "^6.8.2",
     "nodemon": "^2.0.20",
     "string-replace-async": "^3.0.2",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "uuid": "^9.0.0"
   }
 }
