--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "ts-node index.ts",
+    "start": "node dist/index.js",
     "startlive": "nodemon index.ts",
     "build": "tsc"
   },
