Fixed rewrite bug fixed bug where only first instance of url was rewritten

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/http-proxy": "^1.17.9",
     "@types/uuid": "^9.0.0",
+    "dotenv": "^16.0.3",
     "http-proxy": "^1.18.1",
     "mongoose": "^6.8.2",
     "nodemon": "^2.0.20",
