--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "http-proxy": "^1.18.1",
     "mongoose": "^6.8.2",
     "nodemon": "^2.0.20",
+    "rollbar": "^2.26.1",
     "string-replace-async": "^3.0.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4",
