--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/http-proxy": "^1.17.9",
     "@types/uuid": "^9.0.0",
     "cheerio": "^1.0.0-rc.12",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "http-proxy": "^1.18.1",
     "mongoose": "^6.8.2",
